# tweeker

./: .gitignore  AGENTS.md  LICENSE  README.md
package/macos/: package.sh
package/windows/: package.ps1
src-frontend/: app.js  index.html  style.css
src-inject/: bridge.js  interceptor.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/autogenerated/: create_alarm.toml  create_scheduled_tweet.toml  delete_alarm.toml  delete_scheduled_tweet.toml  get_alarms.toml  get_auto_read.toml  get_scheduled_tweets.toml  get_timeline_stats.toml  set_auto_read.toml  toggle_alarm.toml  toggle_overlay.toml
src-tauri/src/: commands.rs  interceptor.rs  main.rs  models.rs  scheduler.rs  state.rs  storage.rs
