[package]
name = "tweeker"
version = "1.0.0"
edition = "2021"
authors = ["drkbugs"]
description = "A power-user desktop client for X.com (Twitter)"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1.0", features = ["unstable", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
